tests/baselines/reference/parserErrorRecovery_ParameterList2.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ParameterList2.ts (1 errors) ====
    function f(a, {
                  ~
!!! parserErrorRecovery_ParameterList2.ts(1,15): error TS1005: ')' expected.
    }